--- a/src/planner.css
+++ b/src/planner.css
@@ -32,8 +32,8 @@ div.hr {
 
 .event {
     position: absolute;
-    min-width: 6em;
-    min-height: 2em;
+    /* min-width: 6em;
+    min-height: 2em; */
     background-color: #f2f2f2;
     border: 1px solid #ccc;
     border-radius: 4px;
